Thu Oct 20, 2005 Toshio Kuratomi <toshio@tiki-lounge.com>
	* omf.make, xmldocs.make: Update to files from gnome-common-2.12.  This
	  cleans up some harmless warnings from scrollkeeper when installing
	  into a DESTDIR.
	* lib/libqofsql/Makefile.am, lib/qof/Makefile.am: Hopefully fix the
	  linking of static libqofsql.a into gnotime when no system qof of the
	  required version exists.  At least, it works here with these changes.
	  If there are still problems, please include me on the bug so I can
	  take a look.
Tue Sep 27, 2005 Linas Vepstas <linas@linas.org>
	* Apply sourceforge patch 149570 
	  from bug [ 1294149 ] Doesn't detect QOF 0.6.0
	* cvs tag gnotime-2.2.2 in prep for the 2.2.2 release
Sat Sep 17, 2005 Toshio Kuratomi <toshio@tiki-lounge.com>
	* doc/gnotime-C.omf, doc/gnotime-es.omf: Fix issue where yelp doesn't
	  display an entry for gnotime when browsing because it doesn't
	  recognize the <subject> entry.
Wed Aug 31, 2005 Linas Vepstas <linas@linas.org>
	* Bump to version number 2.2.2
	* Add partial support for sourceforge feature request 
	  [ 1171211 ] possibility to turn off the toolbar
	* Fix sourceforge bug [ 799077 ] projects blanked when first time user
	  tries to sort
	* query.c: fix broken leap-year calculation, leading to bugs
	  sourceforge [ 983408 ]  and [ 1114205 ]
	* journal.c: Fix crash due to hoverhelp timer popping after 
	  a report window is closed.
	* activity.ghtml, ghtml.c:  Change activity report to display 
	  date/time in two distinct html table columns (prettier alignment)
	* Bug fix: sourceforge bug report fixed
	  [ 877193 ] toolbar won't go to/stay in text-only mode
	* Bug fix: editing time brings up wrong report
	* Manually apply patch from sourceforge bug [ 1119338 ] fedora .spec file
	  is out of date and rpm cannot build rpm
	* Fix bug involving copy of old gnotime files to a new machine
	  on which gnotime has never been run before.
	* Fix sourceforge bug [ 1276458 ] "Empty" appears in diary entry